  which initializes the ATK meta policy before it adds the attributes
  to the node. Class can also be extended for even more control.
  Default implementation can be overriden using the $config_meta_handler
  configuration variable. [Peter]
+ Added documentation to callback param and added "addSearchFilter" 
  to add a filter to the searchNodeInstance of the fuzzySearch 
  attribute [Boy]
* AF_RELATION_AUTOLINK now also work with AF_LARGE for manytoone [Boy]
* Fixed bug in securerelation (whould sometimes do it's queries on the
  wrong table) [Harrie]
* $config_language_basedir now defaults to "languages/" again [Thom,Boy]
* Searching in nodes with AF_LARGE fixed for secure relations [Boy] 
* Moved searching in selectDb() and countDb() after adding of
  attributes to query [Boy]
* atkDDL::create now has optional parameter for specifying the database
  name instead of the globally configured database name. [Peter]
* atkDB class contains meta data flags which can be used by subclasses
  to return more detailed meta data. The flags are: MF_PRIMARY,
  MF_UNIQUE, MF_NOT_NULL, MF_AUTO_INCREMENT. Subclasses should return
  these flags in the "flags" field of the column meta data. [Peter]
* atkPgSQLDB::metadata(...) now returns more detailed meta data,
  including for each column the generic type ("gentype"), flags. [Peter]
* atkMySQLDB::metadata(...) now returns more detailed meta data,
  including for each column the generic type ("gentype"), flags. [Peter]  
* Changed parseDate for date attribute to return the day in record
  instead of day+1 [Harrie]
* Fixed AF_NO_LABEL [Boy]
* Changed mysql_pconnect() to mysql_connect() because too many ATK
  apps would make for too many connections [Boy]
* Removed the auto selection from atkRadioAttribute. Now nothing is
  selected not even when it is obligatory [Wouter]

Changes in ATK 5.0.7
--------------------
+ now openssl encryption possible for the atkSecureRelation [Mark]